cli: code cleanup.